--- a/index.html
+++ b/index.html
@@ -16,23 +16,26 @@
       scroll-behavior: smooth;
     }
     .hero {
-      background: url('images/hero-bg.jpg') center/cover no-repeat;
-      color: white;
-      height: 100vh;
-      display: flex;
-      align-items: center;
-    }
-    .hero-overlay {
-      background-color: rgba(0, 0, 0, 0.5);
-      height: 100%;
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      padding: 0 20px;
-    }
+  background: url('MCS.png') center center no-repeat;
+  background-size: contain; /* keeps aspect ratio */
+  color: white;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.hero-overlay {
+  background-color: rgba(0, 0, 0, 0.5); /* keeps text readable */
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 0 20px;
+}
     .section-padding {
       padding: 80px 0;
     }
@@ -63,17 +66,18 @@
     </div>
   </nav>
 
-  <!-- Hero Section -->
-  <section id="home" class="hero">
-    <div class="hero-overlay">
-      <h1 class="display-4 fw-bold">Turning Data Into Insights & Streamlined Web Solutions</h1>
-      <p class="lead">Web Development & Data Analytics tailored for your business</p>
-      <div class="mt-4">
-        <a href="#services" class="btn btn-primary btn-lg me-3">Explore Services</a>
-        <a href="#portfolio" class="btn btn-outline-light btn-lg">View Portfolio</a>
-      </div>
+<section id="home" class="hero">
+  <div class="hero-overlay">
+    <img src="MCS.png" alt="Masur Consultant Services" style="max-width: 200px; margin-bottom: 20px;">
+    <h1 class="display-4 fw-bold">Turning Data Into Insights & Streamlined Web Solutions</h1>
+    <p class="lead">Web Development & Data Analytics tailored for your business</p>
+    <div class="mt-4">
+      <a href="#services" class="btn btn-primary btn-lg me-3">Explore Services</a>
+      <a href="#portfolio" class="btn btn-outline-light btn-lg">View Portfolio</a>
     </div>
-  </section>
+  </div>
+</section>
+
 
   <!-- Services Section -->
   <section id="services" class="section-padding bg-light">
