--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       font-family: 'Inter', sans-serif;
       scroll-behavior: smooth;
     }
-    .hero {
-  background: url('MCS.png') center center no-repeat;
-  background-size: contain; /* keeps aspect ratio */
+    
+  .hero {
+  /* Remove the background image — we’re using <img> instead */
   color: white;
   height: 100vh;
   display: flex;
@@ -26,7 +26,7 @@
 }
 
 .hero-overlay {
-  background-color: rgba(0, 0, 0, 0.5); /* keeps text readable */
+  background-color: rgba(0, 0, 0, 0.5); /* semi-transparent overlay for readability */
   height: 100%;
   width: 100%;
   display: flex;
@@ -65,7 +65,7 @@
       </div>
     </div>
   </nav>
-
+  
 <section id="home" class="hero">
   <div class="hero-overlay">
     <img src="MCS.png" alt="Masur Consultant Services" style="max-width: 200px; margin-bottom: 20px;">
@@ -77,6 +77,7 @@
     </div>
   </div>
 </section>
+
 
 
   <!-- Services Section -->
