Update contact email in index.html

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
             </div>
           </form>
           <div class="text-center mt-3">
-            <p>Or reach me at: <a href="mailto:masurconsultantervices@gmail.com">masurconsultantervices@gmail.com</a> | Phone: (570) 846-7988</p>
+            <p>Or reach me at: <a href="mailto:masurcs@outlook.com">masurcs@outlook.com</a> | Phone: (570) 846-7988</p>
           </div>
         </div>
       </div>
