--- a/index.html
+++ b/index.html
@@ -210,6 +210,21 @@
     </div>
   </section>
 
+  <!-- Resume Section -->
+<section id="resume" class="section-padding bg-light">
+  <div class="container">
+    <h2 class="text-center mb-5">My Resume</h2>
+    <div class="row justify-content-center">
+      <div class="col-md-6 text-center">
+        <p>Download my latest resume to see my experience, skills, and projects.</p>
+        <a href="Jay_Masur_Resume.pdf" download class="btn btn-primary btn-lg">
+          <i class="fas fa-download me-2"></i>Download Resume
+        </a>
+      </div>
+    </div>
+  </div>
+</section>
+
   <!-- Contact Section -->
   <section id="contact" class="section-padding">
     <div class="container">
